seaqt/QtGui/gen_qguiapplication.nim


proc fcQGuiApplication_new(argc: ptr cint, argv: cstringArray): ptr cQGuiApplication {.importc: "QGuiApplication_new".}
proc fcQGuiApplication_new2(argc: ptr cint, argv: cstringArray, param3: cint): ptr cQGuiApplication {.importc: "QGuiApplication_new2".}
proc fcQGuiApplication_metaObject(self: pointer, ): pointer {.importc: "QGuiApplication_metaObject".}
proc fcQGuiApplication_metacast(self: pointer, param1: cstring): pointer {.importc: "QGuiApplication_metacast".}
proc fcQGuiApplication_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QGuiApplication_metacall".}
proc fcQGuiApplication_tr(s: cstring): struct_miqt_string {.importc: "QGuiApplication_tr".}
proc fcQGuiApplication_setApplicationDisplayName(name: struct_miqt_string): void {.importc: "QGuiApplication_setApplicationDisplayName".}
proc fcQGuiApplication_applicationDisplayName(): struct_miqt_string {.importc: "QGuiApplication_applicationDisplayName".}
proc fcQGuiApplication_setDesktopFileName(name: struct_miqt_string): void {.importc: "QGuiApplication_setDesktopFileName".}
proc fcQGuiApplication_desktopFileName(): struct_miqt_string {.importc: "QGuiApplication_desktopFileName".}
proc fcQGuiApplication_allWindows(): struct_miqt_array {.importc: "QGuiApplication_allWindows".}
proc fcQGuiApplication_topLevelWindows(): struct_miqt_array {.importc: "QGuiApplication_topLevelWindows".}
proc fcQGuiApplication_topLevelAt(pos: pointer): pointer {.importc: "QGuiApplication_topLevelAt".}
proc fcQGuiApplication_setWindowIcon(icon: pointer): void {.importc: "QGuiApplication_setWindowIcon".}
proc fcQGuiApplication_windowIcon(): pointer {.importc: "QGuiApplication_windowIcon".}
proc fcQGuiApplication_platformName(): struct_miqt_string {.importc: "QGuiApplication_platformName".}
proc fcQGuiApplication_modalWindow(): pointer {.importc: "QGuiApplication_modalWindow".}
proc fcQGuiApplication_focusWindow(): pointer {.importc: "QGuiApplication_focusWindow".}
proc fcQGuiApplication_focusObject(): pointer {.importc: "QGuiApplication_focusObject".}
proc fcQGuiApplication_primaryScreen(): pointer {.importc: "QGuiApplication_primaryScreen".}
proc fcQGuiApplication_screens(): struct_miqt_array {.importc: "QGuiApplication_screens".}
proc fcQGuiApplication_screenAt(point: pointer): pointer {.importc: "QGuiApplication_screenAt".}
proc fcQGuiApplication_devicePixelRatio(self: pointer, ): float64 {.importc: "QGuiApplication_devicePixelRatio".}
proc fcQGuiApplication_overrideCursor(): pointer {.importc: "QGuiApplication_overrideCursor".}
proc fcQGuiApplication_setOverrideCursor(overrideCursor: pointer): void {.importc: "QGuiApplication_setOverrideCursor".}
proc fcQGuiApplication_changeOverrideCursor(param1: pointer): void {.importc: "QGuiApplication_changeOverrideCursor".}
proc fcQGuiApplication_restoreOverrideCursor(): void {.importc: "QGuiApplication_restoreOverrideCursor".}
proc fcQGuiApplication_font(): pointer {.importc: "QGuiApplication_font".}
proc fcQGuiApplication_setFont(font: pointer): void {.importc: "QGuiApplication_setFont".}
proc fcQGuiApplication_clipboard(): pointer {.importc: "QGuiApplication_clipboard".}
proc fcQGuiApplication_palette(): pointer {.importc: "QGuiApplication_palette".}
proc fcQGuiApplication_setPalette(pal: pointer): void {.importc: "QGuiApplication_setPalette".}
proc fcQGuiApplication_keyboardModifiers(): cint {.importc: "QGuiApplication_keyboardModifiers".}
proc fcQGuiApplication_queryKeyboardModifiers(): cint {.importc: "QGuiApplication_queryKeyboardModifiers".}
proc fcQGuiApplication_mouseButtons(): cint {.importc: "QGuiApplication_mouseButtons".}
proc fcQGuiApplication_setLayoutDirection(direction: cint): void {.importc: "QGuiApplication_setLayoutDirection".}
proc fcQGuiApplication_layoutDirection(): cint {.importc: "QGuiApplication_layoutDirection".}
proc fcQGuiApplication_isRightToLeft(): bool {.importc: "QGuiApplication_isRightToLeft".}
proc fcQGuiApplication_isLeftToRight(): bool {.importc: "QGuiApplication_isLeftToRight".}
proc fcQGuiApplication_styleHints(): pointer {.importc: "QGuiApplication_styleHints".}
proc fcQGuiApplication_setDesktopSettingsAware(on: bool): void {.importc: "QGuiApplication_setDesktopSettingsAware".}
proc fcQGuiApplication_desktopSettingsAware(): bool {.importc: "QGuiApplication_desktopSettingsAware".}
proc fcQGuiApplication_inputMethod(): pointer {.importc: "QGuiApplication_inputMethod".}
proc fcQGuiApplication_setQuitOnLastWindowClosed(quit: bool): void {.importc: "QGuiApplication_setQuitOnLastWindowClosed".}
proc fcQGuiApplication_quitOnLastWindowClosed(): bool {.importc: "QGuiApplication_quitOnLastWindowClosed".}
proc fcQGuiApplication_applicationState(): cint {.importc: "QGuiApplication_applicationState".}
proc fcQGuiApplication_setHighDpiScaleFactorRoundingPolicy(policy: cint): void {.importc: "QGuiApplication_setHighDpiScaleFactorRoundingPolicy".}
proc fcQGuiApplication_highDpiScaleFactorRoundingPolicy(): cint {.importc: "QGuiApplication_highDpiScaleFactorRoundingPolicy".}
proc fcQGuiApplication_exec(): cint {.importc: "QGuiApplication_exec".}
proc fcQGuiApplication_notify(self: pointer, param1: pointer, param2: pointer): bool {.importc: "QGuiApplication_notify".}
proc fcQGuiApplication_isSessionRestored(self: pointer, ): bool {.importc: "QGuiApplication_isSessionRestored".}
proc fcQGuiApplication_sessionId(self: pointer, ): struct_miqt_string {.importc: "QGuiApplication_sessionId".}
proc fcQGuiApplication_sessionKey(self: pointer, ): struct_miqt_string {.importc: "QGuiApplication_sessionKey".}
proc fcQGuiApplication_isSavingSession(self: pointer, ): bool {.importc: "QGuiApplication_isSavingSession".}
proc fcQGuiApplication_sync(): void {.importc: "QGuiApplication_sync".}
proc fcQGuiApplication_fontDatabaseChanged(self: pointer, ): void {.importc: "QGuiApplication_fontDatabaseChanged".}
proc fcQGuiApplication_connect_fontDatabaseChanged(self: pointer, slot: int) {.importc: "QGuiApplication_connect_fontDatabaseChanged".}
proc fcQGuiApplication_screenAdded(self: pointer, screen: pointer): void {.importc: "QGuiApplication_screenAdded".}
proc fcQGuiApplication_connect_screenAdded(self: pointer, slot: int) {.importc: "QGuiApplication_connect_screenAdded".}
proc fcQGuiApplication_screenRemoved(self: pointer, screen: pointer): void {.importc: "QGuiApplication_screenRemoved".}
proc fcQGuiApplication_connect_screenRemoved(self: pointer, slot: int) {.importc: "QGuiApplication_connect_screenRemoved".}
proc fcQGuiApplication_primaryScreenChanged(self: pointer, screen: pointer): void {.importc: "QGuiApplication_primaryScreenChanged".}
proc fcQGuiApplication_connect_primaryScreenChanged(self: pointer, slot: int) {.importc: "QGuiApplication_connect_primaryScreenChanged".}
proc fcQGuiApplication_lastWindowClosed(self: pointer, ): void {.importc: "QGuiApplication_lastWindowClosed".}
proc fcQGuiApplication_connect_lastWindowClosed(self: pointer, slot: int) {.importc: "QGuiApplication_connect_lastWindowClosed".}
proc fcQGuiApplication_focusObjectChanged(self: pointer, focusObject: pointer): void {.importc: "QGuiApplication_focusObjectChanged".}
proc fcQGuiApplication_connect_focusObjectChanged(self: pointer, slot: int) {.importc: "QGuiApplication_connect_focusObjectChanged".}
proc fcQGuiApplication_focusWindowChanged(self: pointer, focusWindow: pointer): void {.importc: "QGuiApplication_focusWindowChanged".}
proc fcQGuiApplication_connect_focusWindowChanged(self: pointer, slot: int) {.importc: "QGuiApplication_connect_focusWindowChanged".}
proc fcQGuiApplication_applicationStateChanged(self: pointer, state: cint): void {.importc: "QGuiApplication_applicationStateChanged".}
proc fcQGuiApplication_connect_applicationStateChanged(self: pointer, slot: int) {.importc: "QGuiApplication_connect_applicationStateChanged".}
proc fcQGuiApplication_layoutDirectionChanged(self: pointer, direction: cint): void {.importc: "QGuiApplication_layoutDirectionChanged".}
proc fcQGuiApplication_connect_layoutDirectionChanged(self: pointer, slot: int) {.importc: "QGuiApplication_connect_layoutDirectionChanged".}
proc fcQGuiApplication_commitDataRequest(self: pointer, sessionManager: pointer): void {.importc: "QGuiApplication_commitDataRequest".}
proc fcQGuiApplication_connect_commitDataRequest(self: pointer, slot: int) {.importc: "QGuiApplication_connect_commitDataRequest".}
proc fcQGuiApplication_saveStateRequest(self: pointer, sessionManager: pointer): void {.importc: "QGuiApplication_saveStateRequest".}
proc fcQGuiApplication_connect_saveStateRequest(self: pointer, slot: int) {.importc: "QGuiApplication_connect_saveStateRequest".}
proc fcQGuiApplication_applicationDisplayNameChanged(self: pointer, ): void {.importc: "QGuiApplication_applicationDisplayNameChanged".}
proc fcQGuiApplication_connect_applicationDisplayNameChanged(self: pointer, slot: int) {.importc: "QGuiApplication_connect_applicationDisplayNameChanged".}
proc fcQGuiApplication_paletteChanged(self: pointer, pal: pointer): void {.importc: "QGuiApplication_paletteChanged".}
proc fcQGuiApplication_connect_paletteChanged(self: pointer, slot: int) {.importc: "QGuiApplication_connect_paletteChanged".}
proc fcQGuiApplication_fontChanged(self: pointer, font: pointer): void {.importc: "QGuiApplication_fontChanged".}
proc fcQGuiApplication_connect_fontChanged(self: pointer, slot: int) {.importc: "QGuiApplication_connect_fontChanged".}
proc fcQGuiApplication_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QGuiApplication_tr2".}
proc fcQGuiApplication_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGuiApplication_tr3".}
proc fQGuiApplication_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QGuiApplication_virtualbase_metaObject".}
proc fcQGuiApplication_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QGuiApplication_override_virtual_metaObject".}
proc fQGuiApplication_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QGuiApplication_virtualbase_metacast".}
proc fcQGuiApplication_override_virtual_metacast(self: pointer, slot: int) {.importc: "QGuiApplication_override_virtual_metacast".}
proc fQGuiApplication_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QGuiApplication_virtualbase_metacall".}
proc fcQGuiApplication_override_virtual_metacall(self: pointer, slot: int) {.importc: "QGuiApplication_override_virtual_metacall".}
proc fQGuiApplication_virtualbase_notify(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QGuiApplication_virtualbase_notify".}
proc fcQGuiApplication_override_virtual_notify(self: pointer, slot: int) {.importc: "QGuiApplication_override_virtual_notify".}
proc fQGuiApplication_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QGuiApplication_virtualbase_event".}
proc fcQGuiApplication_override_virtual_event(self: pointer, slot: int) {.importc: "QGuiApplication_override_virtual_event".}
proc fQGuiApplication_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGuiApplication_virtualbase_eventFilter".}
proc fcQGuiApplication_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGuiApplication_override_virtual_eventFilter".}
proc fQGuiApplication_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGuiApplication_virtualbase_timerEvent".}
proc fcQGuiApplication_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGuiApplication_override_virtual_timerEvent".}
proc fQGuiApplication_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGuiApplication_virtualbase_childEvent".}
proc fcQGuiApplication_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGuiApplication_override_virtual_childEvent".}
proc fQGuiApplication_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGuiApplication_virtualbase_customEvent".}
